<resources>
    <string name="app_name">Calculador de Gasto por Viajero</string>
    <string name="consumo">Consumo del coche</string>
    <string name="km">Km recorridos</string>
    <string name="precio">Precio del litro</string>
    <string name="viajeros">Número de viajeros</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="error_consumo">El consumo ha de ser mayor que 0</string>
    <string name="error_km">Los km recorridos han de ser mayor que 0</string>
    <string name="error_precio">El precio ha de ser mayor que 0</string>
    <string name="error_viajeros">Los viajeros han de ser más que 0</string>
    <string name="ok">Operacion realizada</string>
    <string name="error">Operacion no realizada</string>
    <string name="acercaDe_texto">Aplicación realizada por Carlos Blanco</string>
    <string name="acerca_de">Acerca de</string>
</resources>
